# pax2

./: .gitignore  CMakeLists.txt  license.txt  readme.md
R/: build.r  models.r
R/nonlinear-models/: nlm.tex
R/pax.regression/: DESCRIPTION  NAMESPACE
R/pax.regression/R/: csv-stuff.r  geodata-stuff.r  logging.r  model-base.r  model-basic_linear.r  model-lidar_exponential.r  models.r  pax-regression-package.r  plot-sample-outlier-reduction.r  plot-sample-ruta.r  stuff.r
R/pax.regression/inst/tools/: pax-regression
R/pax.regression/man/: as.Model.Rd  check_available_columns.Rd  file.name.Rd  file.suffix.Rd  fix_predicted_root.Rd  geodata.stuff.Rd  get_ruta_id.Rd  logging.Rd  model_and_predict.Rd  modelling_details.Rd  pax.regression.Rd  pax.regression.package.Rd  plot_sample_outlier_reduction.Rd  plot_sample_ruta.Rd  read_csv_file.Rd  required_plot_cols.outlier_reduction.Rd  required_plot_cols.plot_sample_ruta.Rd  variant_alts.Rd  write_csv_file.Rd
docker/: _create.sh  _develop.sh  _process.sh  _test.sh  instructions.md
docker/slu/: Dockerfile
doctests-data/: arguments.json
doctests-data/csv/: other-header.csv
doctests-data/csv/consistent-headers/: B.csv
doctests-data/plot-metric/: plots.csv
doctests-data/text-table/: plots.csv
documentation/: dockerhub-readme.md  example-1.md  example-1.sh  example-all-at-once.sh  example-en-mass.md  metrics-how-to-specify.md  pax-concat-files.md  pax-metrics.md  pdal-plot_metrics.md  pdal-plot_points.md  pdal-raster_metrics.md  pdal-remove_overlap.md  pdal-slu_lm.md
documentation/extra-allt/: extra-allt.tex
documentation/extra-allt/metrics/: L-moments.tex  count.tex  kurtosis.tex  mad.tex  mean.tex  percentile.tex  proportion.tex  skewness.tex  stddev.tex  variance.tex
documentation/producing-forest-variables/: producing-forest-variables.tex
documentation/producing-forest-variables/ills/: make-system.idraw
include/: compile_commands.json
include/pax/: concepts.hpp  doctest.hpp  dummy.lib.cpp
include/pax/math/: adjust.hpp  comparison.hpp  power.hpp
include/pax/math/metrics/: ordered.hpp  summary.hpp
include/pax/meta/: class-meta.hpp  cmd-arguments.hpp  meta.hpp  tagged_type.hpp  version.hpp
include/pax/meta/cmd-arguments/: arguments.hpp  parse_json.hpp  terminal.hpp
include/pax/meta/version/: version.in.hpp  version_Darwin  version_Linux
include/pax/pdal/metrics-infrastructure/: _general.hpp  filter.hpp  function-filter.hpp  function.hpp  ordered-aggregator.hpp  point-aggregator.hpp
include/pax/pdal/modules/: pdal_plugin_filter_plot_metrics.hpp  pdal_plugin_filter_plot_metrics_old.hpp  pdal_plugin_filter_plot_points.hpp  pdal_plugin_filter_plot_points2.hpp  pdal_plugin_filter_plot_points_old.hpp  pdal_plugin_filter_plot_stuff.hpp  pdal_plugin_filter_raster_metrics.hpp  pdal_plugin_filter_raster_metrics2.hpp  pdal_plugin_filter_raster_metrics_old.hpp  pdal_plugin_filter_remove_overlap.hpp  pdal_plugin_filter_slu_lm.hpp  pdal_plugin_filter_slu_lm2.hpp  pdal_plugin_filter_slu_lm_old.hpp
include/pax/pdal/process/: plot-base.hpp  plot-metrics.hpp  plot-points.hpp
include/pax/pdal/process_old/: plot-metrics.hpp  plot-points.hpp
include/pax/reporting/: as_ascii.hpp  debug.hpp  error_message.hpp  progress.hpp  seconds_to_string.hpp  timers.hpp
include/pax/std/: algorithm.hpp  constant_type.hpp  contiguous_stuff.hpp  file.hpp  format-too.hpp  format.hpp  mdspan.hpp  span.hpp  span2.hpp  string_view.hpp  string_view2.hpp
include/pax/tables/: concat-tables.hpp  header.hpp  meta.hpp  parse2table.hpp  resize-reorder.hpp  strided-iterator.hpp  table.hpp  table2html.hpp  text-table.hpp  tools.hpp
include/pax/textual/: as_ascii.hpp  from_string.hpp  html-table-template.hpp  json.hpp  quote_it.hpp  string_meta.hpp  to_string.hpp
include/pax/types/: arrector.hpp  litteral.hpp  point-stuff.hpp  shadow.hpp  tagged_type.hpp
pdal-plugins/: pdal_plugin_filter_plot_metrics.cpp  pdal_plugin_filter_plot_metrics_old.cpp  pdal_plugin_filter_plot_points.cpp  pdal_plugin_filter_plot_points2.cpp  pdal_plugin_filter_plot_points_old.cpp  pdal_plugin_filter_plot_stuff.cpp  pdal_plugin_filter_raster_metrics.cpp  pdal_plugin_filter_raster_metrics.cpp_old  pdal_plugin_filter_raster_metrics2.cpp  pdal_plugin_filter_remove_overlap.cpp  pdal_plugin_filter_slu_lm.cpp  pdal_plugin_filter_slu_lm2.cpp  pdal_plugin_filter_slu_lm_old.cpp
tests/math/: adjust.doctest.cpp  comparison.doctest.cpp  power.doctest.cpp
tests/math/metrics/: _metrics-key.hpp  _metrics-key.r  ordered.doctest.cpp  summary.doctest.cpp
tests/meta/: arguments.doctest.cpp  class_meta.doctest.cpp  meta.doctest.cpp  tagged_type.doctest.cpp  version.doctest.cpp
tests/pdal-tests/metrics-infrastructure/: filter.doctest.cpp  function-filter.doctest.cpp  function.doctest.cpp  ordered-aggregator.doctest.cpp  point-aggregator.doctest.cpp
tests/pdal-tests/process/: plot-metrics.doctest.cpp  plot-points.doctest.cpp
tests/pdal-tests/utilities/: bbox_indexer.doctest.cpp
tests/point-stuff/: box.doctest.cpp  circle.doctest.cpp  pdal.doctest.cpp  point.doctest.cpp  span-base.doctest.cpp  span-distance.doctest.cpp
tests/reporting/: as_ascii.doctest.cpp  assert.doctest.cpp  debug.doctest.cpp
tests/std/: algorithm.doctest.cpp  constant_type.doctest.cpp  file.doctest.cpp  md_span.doctest.cpp  source_location.doctest.cpp  span.doctest.cpp  span2.doctest.cpp  string_splitter.doctest.cpp  string_view.doctest.cpp  string_view2.doctest.cpp
tests/tables/: concat-tables.doctest.cpp  header.doctest.cpp  parse2table.doctest.cpp  resize-reorder.doctest.cpp  strided-iterator.doctest.cpp  table.doctest.cpp  table2html.doctest.cpp  text-table.doctest.cpp  tools.doctest.cpp
tests/textual/: as_ascii.doctest.cpp  from_string.doctest.cpp  json.doctest.cpp  json.doctest.hpp  quote_it.doctest.cpp  string_meta.doctest.cpp  string_numeric.doctest.cpp  to_string.doctest.cpp
tests/types/: concepts.doctest.cpp  shadow.doctest.cpp  tagged_type.doctest.cpp
tools/: doctest-main.cpp  pax-concat-tables.cpp  pax-html-table.cpp  pax-metrics.cpp  pax-table2html.cpp  timeit.cpp
(+16 files in other folders)
